# Flower-Store

backend-app/backend/: pyproject.toml
backend-app/backend/app/: main.py
frontend-app/: package-lock.json  package.json
