[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["xml-aztec <asankozhoevn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
pyodbc = "^5.2.0"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
